feat: adding toast to delete process.

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -11,6 +11,7 @@
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="blazorappdemo.styles.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <link href="{YOUR APP ASSEMBLY NAME}.styles.css" rel="stylesheet">
 </head>
 
 <body>
